--- a/ZHA Philips Hue Dimmer Switch (RWL022) (Scene Peset).yaml
+++ b/ZHA Philips Hue Dimmer Switch (RWL022) (Scene Peset).yaml
@@ -1,5 +1,5 @@
 blueprint:
-  name: "MQTT Philips Hue Dimmer Switch (Scene Preset). Version: 2.1.9"
+  name: "MQTT Philips Hue Dimmer Switch (Scene Preset). Version: 2.1.10"
   description: >
     Control lights with a Philips Hue Dimmer Switch. Scene Preset integration is required https://github.com/Hypfer/hass-scene_presets
   domain: automation
@@ -248,7 +248,26 @@ trigger:
       {% endif %}
 action:
   - variables:
-      command: "{{ trigger.payload }}"
+      command: >-
+        {% set action_map = {
+          'on_press': 'on_press',
+          'on_press_release': 'on_press',
+          'on_hold': 'on_hold',
+          'on_hold_release': 'on_hold_release',
+          'up_press': 'up_press',
+          'up_press_release': 'up_press',
+          'up_hold': 'up_hold',
+          'up_hold_release': 'up_hold_release',
+          'down_press': 'down_press',
+          'down_press_release': 'down_press',
+          'down_hold': 'down_hold',
+          'down_hold_release': 'down_hold_release',
+          'off_press': 'off_press',
+          'off_press_release': 'off_press',
+          'off_hold': 'off_hold',
+          'off_hold_release': 'off_hold_release'
+        } %}
+        {{ action_map[trigger.payload] if trigger.payload in action_map else trigger.payload }}
       included_scenes: !input included_scenes
       scene_helper: !input scene_helper
       reset_after: !input reset_after
