--- a/ZHA Philips Hue Dimmer Switch V1 (RWL020).yaml
+++ b/ZHA Philips Hue Dimmer Switch V1 (RWL020).yaml
@@ -1,5 +1,5 @@
 blueprint:
-  name: MQTT Philips Hue Dimmer Switch (RWL020) v2.1.2
+  name: MQTT Philips Hue Dimmer Switch (RWL020) v2.1.3
   description: Control lights with a Philips Hue Dimmer Switch
   domain: automation
   input:
@@ -97,12 +97,8 @@ mode: restart
 max_exceeded: silent
 trigger:
   - platform: mqtt
-    topic: "zigbee2mqtt/+/action"
-    value_template: >-
-      {% set device = trigger.topic.split('/')[1] %}
-      {% if device == device_attr(dimmer_switch, 'name') %}
-        {{ trigger.payload }}
-      {% endif %}
+    topic: "zigbee2mqtt/{{ device_attr(dimmer_switch, 'name') }}/action"
+    value_template: "{{ value_json }}"
 action:
   - variables:
       command: "{{ trigger.event.data.command }}"
