--- a/ZHA Philips Hue Dimmer Switch V1 (RWL020).yaml
+++ b/ZHA Philips Hue Dimmer Switch V1 (RWL020).yaml
@@ -1,5 +1,5 @@
 blueprint:
-  name: MQTT Philips Hue Dimmer Switch (RWL020) v2.1.3
+  name: MQTT Philips Hue Dimmer Switch (RWL020) v2.1.4
   description: Control lights with a Philips Hue Dimmer Switch
   domain: automation
   input:
@@ -101,7 +101,7 @@ trigger:
     value_template: "{{ value_json }}"
 action:
   - variables:
-      command: "{{ trigger.event.data.command }}"
+      command: "{{ trigger.payload_json }}"
       included_scenes: !input included_scenes
       scene_helper: !input scene_helper
       reset_after: !input reset_after
