Refactor action handling in Philips Hue Dimmer Switch blueprint to utilize trigger payload directly instead of JSON. This change enhances clarity and efficiency in command processing, improving integration with Zigbee2MQTT.

--- a/ZHA Philips Hue Dimmer Switch V1 (RWL020).yaml
+++ b/ZHA Philips Hue Dimmer Switch V1 (RWL020).yaml
@@ -98,10 +98,10 @@ max_exceeded: silent
 trigger:
   - platform: mqtt
     topic: "zigbee2mqtt/{{ device_attr(dimmer_switch, 'name') }}/action"
-    value_template: "{{ value_json }}"
+
 action:
   - variables:
-      command: "{{ trigger.payload_json }}"
+      command: "{{ trigger.payload }}"
       included_scenes: !input included_scenes
       scene_helper: !input scene_helper
       reset_after: !input reset_after
