Update MQTT Philips Hue Dimmer Switch blueprint to version 2.2.1. This release introduces enhanced action handling for the 'off_press' command, implementing conditional logic to manage light turn-off transitions based on brightness levels. The update improves the dimmer switch's functionality by providing immediate off actions for low brightness and smoother transitions for higher brightness levels.

--- a/ZHA Philips Hue Dimmer Switch V1 (RWL020).yaml
+++ b/ZHA Philips Hue Dimmer Switch V1 (RWL020).yaml
@@ -1,5 +1,5 @@
 blueprint:
-  name: MQTT Philips Hue Dimmer Switch (RWL020) v2.2.0
+  name: MQTT Philips Hue Dimmer Switch (RWL020) v2.2.1
   description: Control lights with a Philips Hue Dimmer Switch
   domain: automation
   input:
@@ -230,11 +230,21 @@ action:
 
       - conditions: "{{ command == 'off_press' }}"
         sequence:
-          - service: light.turn_off
-            target:
-              entity_id: !input light
-            data:
-              transition: !input transition_time
+          - choose:
+              - conditions: "{{ state_attr(light, 'brightness') | default(0) <= 25 }}" # 25 is ~10% of 255
+                sequence:
+                  - service: light.turn_off
+                    target:
+                      entity_id: !input light
+                    data:
+                      transition: 0
+              - conditions: "{{ state_attr(light, 'brightness') | default(0) > 25 }}"
+                sequence:
+                  - service: light.turn_off
+                    target:
+                      entity_id: !input light
+                    data:
+                      transition: !input transition_time
 
       - conditions: "{{ command == 'off_double_press' }}"
         sequence:
