--- a/ZHA Philips Hue Dimmer Switch V2 (RWL022).yaml
+++ b/ZHA Philips Hue Dimmer Switch V2 (RWL022).yaml
@@ -1,5 +1,5 @@
 blueprint:
-  name: MQTT Philips Hue Dimmer Switch (RWL022) v.2.5.6
+  name: MQTT Philips Hue Dimmer Switch (RWL022) v.2.5.7
   description: Control lights with a Philips Hue Dimmer Switch
   domain: automation
   input:
@@ -105,11 +105,10 @@ max_exceeded: silent
 trigger:
   - platform: state
     entity_id: !input dimmer_switch
-    id: dimmer_action
 
 action:
   - variables:
-      command: "{{ trigger.event.data.command }}"
+      command: "{{ trigger.to_state.state }}"
       included_scenes: !input included_scenes
       scene_helper: !input scene_helper
       reset_after: !input reset_after
