--- a/ZHA Philips Hue Dimmer Switch (RWL022) (Scene Peset).yaml
+++ b/ZHA Philips Hue Dimmer Switch (RWL022) (Scene Peset).yaml
@@ -1,5 +1,5 @@
 blueprint:
-  name: "MQTT Philips Hue Dimmer Switch (Scene Preset). Version: 2.1.11"
+  name: "MQTT Philips Hue Dimmer Switch (Scene Preset). Version: 2.1.12"
   description: >
     Control lights with a Philips Hue Dimmer Switch. Scene Preset integration is required https://github.com/Hypfer/hass-scene_presets
   domain: automation
@@ -340,7 +340,7 @@ action:
                       targets:
                         entity_id: "{{ target_lights }}"
       - conditions:
-          - "{{ command == 'on_double_press' }}"
+          - "{{ command == 'on_hold' }}"
         sequence:
           - service: scene_presets.stop_dynamic_scenes_for_targets
             data:
@@ -389,16 +389,6 @@ action:
                     data:
                       brightness_pct: 100
                       transition: !input transition_time
-      - conditions: "{{ command == 'up_double_press' }}"
-        sequence:
-          - service: light.turn_on
-            target:
-              entity_id:
-                "{{ expand(target_lights) | selectattr('state', 'eq', 'on')
-                | map(attribute='entity_id') | list }}"
-            data:
-              brightness_pct: 100
-              transition: !input transition_time
       - conditions:
           - "{{ command == 'down_hold' or command == 'down_press' }}"
         sequence:
@@ -423,16 +413,6 @@ action:
                     data:
                       brightness_pct: 1
                       transition: !input transition_time
-      - conditions: "{{ command == 'down_double_press' }}"
-        sequence:
-          - service: light.turn_on
-            target:
-              entity_id:
-                "{{ expand(target_lights) | selectattr('state', 'eq', 'on')
-                | map(attribute='entity_id') | list }}"
-            data:
-              brightness_pct: 1
-              transition: !input transition_time
       - conditions: "{{ command == 'off_press' }}"
         sequence:
           - service: scene_presets.stop_dynamic_scenes_for_targets
